--- a/Web1/Web1/Views/Shared/_Layout.cshtml
+++ b/Web1/Web1/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewData["Title"] - Web1</title>
 
     <environment names="Staging,Production,Development">
-
+        <link href="~/app.vendor.bundle1.css" rel="stylesheet" />
     </environment>
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
