--- a/Web1/Web1/Views/Shared/_Layout.cshtml
+++ b/Web1/Web1/Views/Shared/_Layout.cshtml
@@ -32,12 +32,9 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div id="container" class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2017 - Web1</p>
-        </footer>
     </div>
 
     <environment names="Staging,Production,Development">
